# mind_glasses

./: CMakeLists.txt  LICENSE  Main_gui.cpp  Main_gui.hpp  README.md  glasses-gui.ui  main.cpp  stdafx.h  xml2json.hpp
include/phonon/: phononnamespace.h
py_modules/: Extract_Image.py  compare.py  itchatpy.py  ocr_space.py  plante.py  read_mindwave_mobile.py  train.py
submodule/: OcrWords.hpp  translate.hpp
subthread/: OCRThread.cpp  OCRThread.hpp  OIThread.cpp  OIThread.hpp  ServerThread.cpp  ServerThread.hpp  TransThread.cpp  TransThread.hpp
