cmake_minimum_required(VERSION 3.5)
project(mind)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
set(CMAKE_PREFIX_PATH "/home/vrit/Soft/Qt5.8.0/5.8/gcc_64")
find_package(OpenCV REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Network REQUIRED)
find_package(Qt5Multimedia REQUIRED)
find_package(Qt5MultimediaWidgets REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${CMAKE_SOURCE_DIR}/include)
set(OpenCV_LIBS opencv_core opencv_imgproc opencv_highgui opencv_imgcodecs opencv_videoio)
set(Qt_LIBS Qt5::Widgets Qt5::Multimedia Qt5::MultimediaWidgets Qt5::Network phonon4qt5)
set(SOURCE_FILES main.cpp stdafx.h submodule/translate.hpp xml2json.hpp Main_gui.hpp Main_gui.cpp subthread/ServerThread.hpp subthread/ServerThread.cpp subthread/TransThread.hpp subthread/TransThread.cpp subthread/OCRThread.hpp subthread/OCRThread.cpp submodule/OcrWords.hpp subthread/OIThread.hpp subthread/OIThread.cpp)
add_executable(mind_glasses ${SOURCE_FILES})

target_link_libraries(mind_glasses ${OpenCV_LIBS} ${Qt_LIBS} jsoncpp curl python2.7 ssl crypto)